--- a/Html-Css-codes/1index.html
+++ b/Html-Css-codes/1index.html
@@ -20,7 +20,61 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-    
 {% for in data%}
 {% endfor%}
+<!-- The strong element represents strong importance, seriousness, or urgency for its contents.
+ -->
+ <strong>Hello iam  strong </strong>
+
+ <!-- ELMEMENTS AND TAGS IN HTML -->
+  <!-- 
+ HTML Elements
+An element in HTML represents everything from the opening tag to the closing tag, including the content between them (if any).
+
+Example:
+<p>This is a paragraph.</p>
+In this case:
+
+The entire <p>This is a paragraph.</p> is an HTML element.
+Self-closing elements also count as elements:
+
+<img src="image.jpg" alt="Example Image">
+This is a self-closing HTML element, even though it doesn’t have separate opening and closing tags.
+
+
+HTML Tags
+A tag is just the part of the syntax enclosed in angle brackets (<>) used to define an element.
+Tags come in pairs (opening and closing) or as self-closing.
+Opening tag: <div>, <p>, <img>
+Closing tag: </div>, </p>
+Self-closing tag: <img> or <br>
+
+Example:
+For this element:
+<div>This is a container.</div>
+<div> is the opening tag.
+</div> is the closing tag.
+
+Difference Between Elements and Tags
+Aspect	Tags	Elements
+Definition	Syntax enclosed in < > brackets.	Everything from the opening tag to the closing tag, including content.
+Type	Can be opening, closing, or self-closing.	Includes tags and content.
+Example	<p> and </p>	<p>This is a paragraph.</p>
+Examples of Common Elements and Tags
+
+Block Elements (Structural Tags):
+<div>, <section>, <article>, <header>, <footer>, <nav>
+These define containers or sections of content.
+
+Inline Elements (Content Tags):
+<span>, <a>, <strong>, <em>, <img>
+These style or display inline content.
+Form Elements:
+<form>, <input>, <button>, <label>, <textarea>
+
+Media Elements:
+<img>, <video>, <audio>
+Summary
+Tags are the building blocks of HTML that define the structure or function of an element.
+Elements are the full constructs that include tags and their content.
+  -->
