--- a/Html-Css-codes/6inline_block.html
+++ b/Html-Css-codes/6inline_block.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline and Block Element</title>
+    <!-- rel=""This attribute names a relationship of the linked document to the current document. The attribute must be a space-separated. -->
     <link rel="stylesheet" href="style.css">
  </head>
  <p>This is Random text and i think it is very helpful to just push 
@@ -12,7 +13,7 @@
  </p>
  <a href="https://Google.com">Google</a>
  <div>
-    This is Block Element
+    This is Block Element 
  </div>
  <span>
     this is span and can take inline as well
@@ -23,3 +24,7 @@
     
  </body>
  </html>
+
+ <!-- Block Elements (Structural Tags):
+<div>, <section>, <article>, <header>, <footer>, <nav>
+These define containers or sections of content. -->
