--- a/Html-Css-codes/8audio_video.html
+++ b/Html-Css-codes/8audio_video.html
@@ -20,5 +20,45 @@
     <br><br> 
     <iframe src="https://www.codewithharry.com/tutorial/html-iframes/" width="322" height="400" ></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/XZwBNDGuWGU?si=chkFZ5SHE59gcoWS&amp;start=812" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    ,<iframe src="" frameborder="0"></iframe>
 </body>
 </html>
+<!-- What is SVG in HTML?
+SVG (Scalable Vector Graphics) is an XML-based format for creating vector graphics. It is used in HTML to define and display graphics directly in the browser. SVG is resolution-independent, meaning it scales without losing quality, making it ideal for responsive designs.
+
+Purpose: Used to create lines, shapes, paths, and text for graphics like icons, charts, and illustrations.
+Supported By: All modern browsers.
+
+What is the <circle> Tag?
+The <circle> tag is an SVG element used to draw circles. It is one of the most commonly used SVG shapes.
+
+Attributes of <circle>
+cx (Center X): The x-coordinate of the center of the circle.
+
+Example: cx="50" places the circle 50px from the left edge of the SVG canvas.
+cy (Center Y): The y-coordinate of the center of the circle.
+
+Example: cy="50" places the circle 50px from the top edge of the SVG canvas.
+r (Radius): Defines the radius of the circle.
+
+Example: r="40" creates a circle with a radius of 40px.
+fill: Defines the color inside the circle.
+
+Example: fill="red" makes the circle red.
+stroke and stroke-width: Define the outline color and thickness of the circle.
+
+Example: stroke="black" stroke-width="2" adds a black outline 2px thick.
+
+Advantages of SVG
+Scalability: SVG graphics don't pixelate when resized.
+Customizability: You can easily modify shapes, colors, and styles with CSS or JavaScript.
+Lightweight: SVG files are often smaller than bitmap images.
+Interactive: SVGs support animation and user interaction.
+Use Cases of SVG
+Logos
+Icons
+Data visualization (e.g., charts, graphs)
+Animations
+Decorative shapes
+
+-->
