--- a/Html-Css-codes/9sementictags.html
+++ b/Html-Css-codes/9sementictags.html
@@ -2,26 +2,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sementic-Tags </title>
-    <head>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>contact Us</li>
-                <li>About</li>
-            </ul>
-        </nav>
-    </head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sementic-Tags </title>
 </head>
 
 <body>
-    <main>
-        <h1>This is the main content of the Website</h1>
-    </main>
-    <footer>
-        All rights reserved (r)
-    </footer>
+  <header>
+    <h1>Welcome to My Website</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>About Us</h2>
+      <p>This is a section of content about the website.</p>
+    </section>
+
+    <article>
+      <h2>Latest News</h2>
+      <p>Here is an article discussing the latest news.</p>
+    </article>
+
+    <figure>
+      <img src="image.jpg" alt="Example Image">
+      <figcaption>An example image with a caption.</figcaption>
+    </figure>
+  </main>
+
+  <footer>
+    <p>© 2025 My Website. All rights reserved.</p>
+  </footer>
 </body>
 </html>
+<!-- 
+
+Block Elements, Inline Elements, and Media Elements
+Block Elements:
+
+These create structure and occupy the full width of their container.
+Examples: <div>, <section>, <header>, <article>, <footer>.
+Often used to build the layout of a webpage.
+Inline Elements:
+
+These only take up as much width as needed and don't start on a new line.
+Examples: <span>, <a>, <strong>, <em>.
+Media Elements:
+
+Used for embedding or displaying media like images, videos, or audio.
+Examples: <img>, <audio>, <video>.
+2. What Are Semantic Tags?
+Semantic tags are HTML5 tags that clearly define the meaning and purpose of the content they wrap. They not only help with webpage structure but also improve accessibility and SEO.
+
+Examples of Semantic Tags:
+Structural Tags:
+
+<header>: Represents the header section.
+<nav>: Represents a navigation menu.
+<main>: Represents the main content of the page.
+<section>: Represents a distinct section of content.
+<article>: Represents a standalone piece of content.
+<footer>: Represents the footer section.
+Content Tags:
+
+<figure>: Represents a figure, often with an image and caption.
+<figcaption>: Provides a caption for the figure.
+<mark>: Highlights text.
+3. Why Are Semantic Tags Important for SEO?
+Semantic tags enhance website structure and make it easier for search engines to understand the content. Here's how they help in SEO:
+
+Improved Crawling: Search engine crawlers understand the purpose of semantic tags better than generic <div> or <span>, allowing them to prioritize important content.
+
+For example, <header> indicates a page's top section, which often contains the title and navigation.
+Accessibility: Semantic tags help screen readers interpret the content for visually impaired users, improving user experience.
+
+Rich Search Results: Semantic tags combined with structured data (e.g., Schema.org) can lead to rich snippets in search results (e.g., star ratings, FAQs).
+
+ -->
