changes/addition  on 3-3-25

--- a/Html-Css-codes/03CSS.htm
+++ b/Html-Css-codes/03CSS.htm
@@ -51,3 +51,21 @@
 
 </body>
 </html>
+
+<!-- 
+When to use padding vs. margin
+It's essential to know when to use padding vs. margin as you build your website. Once you're familiar with the differences between margin and padding, it'll be easier to determine when it's the right time to implement margins on a page and when you should use padding.
+
+Before you begin your website development project, here are a few things about padding and margins to keep in mind.
+
+When to use padding:
+
+Change the size of an element. If you want to expand the space around an element, you can add or increase the padding surrounding it. This can be useful when working with interactive items, such as buttons or image-based links.
+Add space between borders and content. Using padding to add space between content and its corresponding border is one way to ensure the design aligns with other on-page elements. Doing so can help you increase the whitespace of your graphic or website, which is fundamental in web design.
+
+
+
+When to use margins:
+Adjust an element's positioning. One of the most common reasons to use margins when designing and developing a site is to change a specific element's position. Using margins can help you move an element based on whether you prefer it to be centered on your page or positioned to the right or left. You can also choose if the element is fixed and will scroll along the page or if it should remain in one place as a user scrolls.
+Overlap elements. If you want to overlap specific elements with one another, you can do so using margins. Using a negative margin value is one of the quickest ways to allow elements to overlap with one another.
+Setting distance. Setting the distance between elements is much easier once you're familiar with margins and how they work. Incorporating the right amount of whitespace can mean the difference between building an attractive website thriving with traffic and turning prospective customers away. -->
