--- a/Html-Css-codes/08CSS_Display_Property.html
+++ b/Html-Css-codes/08CSS_Display_Property.html
@@ -12,11 +12,10 @@
         }
         .box1{
             border: 5px solid black;
-            display: inline-block;
+            /* display: inline-block; */
             width:355px;
             padding: 43px;
             margin:34px;
-    
         }
         /* .box1{
             display:none;
