--- a/Html-Css-codes/09CSSShadowsandOutlines.html
+++ b/Html-Css-codes/09CSSShadowsandOutlines.html
@@ -9,11 +9,11 @@
     .box1{
         border : solid black;
         padding:23px;
-        box-shadow:5px 5px 15px 5px #888888;
+        box-shadow:5px 5px 15px 5px #ff1919;
         outline: 10px solid blue; 
     }
     .box{
-        text-shadow:  2px 2px 4px #ff1111;
+        text-shadow:  2px 2px 4px #ff0303;
         outline: 2px solid black;
         border-radius: 10px solid rgb(248, 22, 22);
     }
