--- a/Html-Css-codes/11CSSOverflow_Property.html
+++ b/Html-Css-codes/11CSSOverflow_Property.html
@@ -7,7 +7,8 @@
 </head>
 <style>
     .box{
-        margin: 50px;
+        margin: 0;
+        margin: auto;
         height: 40vw;
         width: 20vh;
         border: 4px solid black;
@@ -15,13 +16,14 @@
         overflow: auto;
         /* white-space: nowrap; */
         /* paragraph kay line ko nichay ,at girao  */
-        /* text-overflow: ellipsis; */
+        text-overflow:ellipsis ;
         /* for (............) */
         /* overflow:hidden;  same as clip removes the scroll bar */
         /* overflow:clip;  */
-        /*  overflow-x: scroll; */
+         /* overflow-x: scroll; */
         /* overflow-y: scroll; */
         overflow:hidden auto;
+        font-size: xx-large;
     }
 
 </style>
